<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#fff"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/imgBack"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:src="@drawable/ic_backarrow_black" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/product"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSave"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@color/yellow"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e7e7e7">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/tvItemtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/item"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="15dp"
                    android:layout_toRightOf="@+id/tvItemtitle"
                    android:gravity="end"
                    android:singleLine="true"
                    android:text=""
                    android:id="@+id/tvItem"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e7e7e7" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/product_code"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:id="@+id/tvProductCode"
                    android:layout_marginRight="15dp"
                    android:gravity="end"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e7e7e7" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/rate"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/edtRate"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:gravity="right|center_vertical"
                    android:text=""
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e7e7e7" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/quantity"
                    android:textSize="14sp" />

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:inputType="number"
                    android:gravity="right|center_vertical"
                    android:hint="@string/tap_to_enter"
                    android:singleLine="true"
                    android:id="@+id/tvQuantity"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </RelativeLayout>

          <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e7e7e7" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/unit"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:id="@+id/tvUnit"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="15dp"
                    android:gravity="end"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
