<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="in.imast.impact.MainActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:elevation="0dp"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="34dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/banner_update" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="SAVE"
                android:textColor="@color/yellow"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/call_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/relativeNotification"
                android:layout_marginEnd="10dp"
                android:background="@drawable/baseline_call_24" />


            <RelativeLayout
                android:id="@+id/relativeNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <LinearLayout
                    android:id="@+id/relative_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/button1"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ic_notifications_new" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvNotificationCount"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignRight="@id/relative_layout"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/item_count"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="#FFF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

    <include
        layout="@layout/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main"
        android:layout_below="@+id/toolbar" />

    <!--<ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/progress"
        android:layout_below="@id/toolbar"
        android:max="100"
        android:progressDrawable="@drawable/progress_bar"
        android:visibility="visible"
        android:progress="45"/>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/toolbar"
        android:background="@drawable/top_shadow" />


    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_above="@id/main"
        android:background="@drawable/bottom_tab_shadow" />


    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linearHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_home_active" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearAttendance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgAttendance"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_transaction_inactive" />

            <TextView
                android:id="@+id/tvAttendance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wallet"
                android:textColor="#999999"
                android:textSize="12sp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLead"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLead"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/invoice_inactive" />

            <TextView
                android:id="@+id/tvLead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/Purchase"
                android:visibility="visible"
                android:textColor="#666666"
                android:textSize="11sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgActivity"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_rewards_inactive_newc" />

            <TextView
                android:id="@+id/tvActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rewards"
                android:textColor="#999999"
                android:textSize="12sp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearMore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgMore"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/ic_menu_inactive_newc" />

            <TextView
                android:id="@+id/tvMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                android:text="@string/Menu"
                android:textColor="#999999"
                android:textSize="12sp"
                android:visibility="visible" />
        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:progress="45"
        android:visibility="visible" />

</RelativeLayout>